--- a/inmates/demos/x86/Makefile
+++ b/inmates/demos/x86/Makefile
@@ -20,8 +20,10 @@ apic-demo-y	:= apic-demo.o
 ioapic-demo-y	:= ioapic-demo.o
 pci-demo-y	:= pci-demo.o
 e1000-demo-y	:= e1000-demo.o
-ivshmem-demo-y	:= ivshmem-demo.o
+ivshmem-demo-y	:= ../ivshmem-demo.o
 smp-demo-y	:= smp-demo.o
+
+ccflags-y	+= -DCONFIG_X86
 
 $(eval $(call DECLARE_32_BIT,32-bit-demo))
 32-bit-demo-y	:= 32-bit-demo.o
